--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,9 +3,9 @@
     package="org.tensorflow.lite.examples.classification">
 
     <uses-sdk />
+
     <!-- 拍照权限 -->
     <uses-permission android:name="android.permission.CAMERA" />
-
     <uses-feature android:name="android.hardware.camera" />
     <uses-feature android:name="android.hardware.camera.autofocus" /> <!-- 读写权限 -->
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
@@ -20,6 +20,15 @@
         android:roundIcon="@drawable/ic_launcher_my"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".SplashActivity"
+            android:label="@string/activity_name_classification"
+            android:screenOrientation="portrait">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity android:name=".QuickGuideActivity" />
         <activity android:name=".MainActivity" />
         <activity android:name=".BaseActivityOfOnline" />
         <activity android:name=".OnlineInferenceActivity" />
@@ -27,16 +36,6 @@
             android:name=".ClassifierActivity"
             android:screenOrientation="portrait" />
         <activity android:name=".tflite.a" /> <!-- screenOrientation:portrait,强制竖屏显示 -->
-        <activity
-            android:name=".WelcomeActivity"
-            android:label="@string/activity_name_classification"
-            android:screenOrientation="portrait">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
     </application>
 
 </manifest>
